Implementacao do CSS

--- a/eventos.html
+++ b/eventos.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Eventos</title>
 </head>
     <body>
-      <header>
+      <header class="cabecalho">
         <img src="./img/logo_recife.png" alt="Logo Recife">
+        <br>
         <nav>
             <ul>
                 <a href="./index.html">
@@ -32,10 +34,10 @@
       </main>  
       <footer>
         <h3>© Visite Recife</h3>
-        <ul>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>Linkedin</li>
+        <ul class="redes-sociais">
+            <li class="texto_footer">Facebook</li>
+            <li class="texto_footer">Instagram</li>
+            <li class="texto_footer">Linkedin</li>
         </ul>
       </footer>
         
