--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visite Recife</title>
 </head>
     <body>
-      <header>
+      <header class="cabecalho">
         <img src="./img/logo_recife.png" alt="Logo Recife">
+        <br>
         <nav>
             <ul>
                 <a href="./index.html">
@@ -22,7 +24,7 @@
             </ul>
         </nav>
       </header>
-      <main>
+      <main class="conteudo">
         <h1>Visite Recife </h1>
         <img src="img/recife_marco_zero.jpg" alt="Imagem do Marco Zero, em Recife">
         <h2>Sobre a cidade</h2>
@@ -31,10 +33,10 @@
       </main>  
       <footer>
         <h3>© Visite Recife</h3>
-        <ul>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>Linkedin</li>
+        <ul class="redes-sociais">
+            <li class="texto_footer">Facebook</li>
+            <li class="texto_footer">Instagram</li>
+            <li class="texto_footer">Linkedin</li>
         </ul>
       </footer>
         
