--- a/pontos-turisticos.html
+++ b/pontos-turisticos.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Pontos Turísticos</title>
 </head>
     <body>
-      <header>
+      <header class="cabecalho">
         <img src="./img/logo_recife.png" alt="Logo Recife">
+        <br>
         <nav>
             <ul>
                 <a href="./index.html">
@@ -29,14 +31,14 @@
         <p>O <strong>Parque das Esculturas de Francisco Brennand</strong> é um dos cartões postais de Recife. Num cenário maravilhoso, o complexo foi construído sobre o molhe do porto no ano 2000 em comemoração aos 500 anos de descobrimento do Brasil.</p>
         <p>Para chegar até ele, os visitantes podem escolher entre fazer a travessia de barco partindo do Marco Zero ou ir pela Avenida Brasília Teimosa. Os dois caminhos levam até uma espécie de museu a céu aberto com esculturas de pássaros, tartarugas e outros animais, entre eles a que mais chama atenção é a flor de 32m de altura, chamada de <strong>“Torre de Cristal”</strong>.</p>
         <p>Algumas esculturas aparecem escondidas sob as águas e dão o ar da graça aos visitantes durante a maré baixa, tornando o passeio diferente a cada visita. A vista que se tem do Recife é maravilhosa e o por do sol imperdível.</p>
-      <footer>
-        <h3>© Visite Recife</h3>
-        <ul>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>Linkedin</li>
-        </ul>
-      </footer>
+        <footer>
+          <h3>© Visite Recife</h3>
+          <ul class="redes-sociais">
+              <li class="texto_footer">Facebook</li>
+              <li class="texto_footer">Instagram</li>
+              <li class="texto_footer">Linkedin</li>
+          </ul>
+        </footer>
         
     </body>
 </html>
